# Ableton_Programming_Task

./: CMakeLists.txt  README.md  WarpMarker.cpp  WarpMarker.h  input.txt  main.cpp  parse_input.cpp  parse_input.h
test/: tests.cpp
